crates/biome_cli/tests/snapshots/main_reporter_json/reports_formatter_write.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages

```block
{"formatter":{"summary":{"filesCompared":null,"filesWritten":1},"files":{}},"diagnostics":{}}
```


